[gd_scene load_steps=11 format=3 uid="uid://djhhdxr628rcc"]

[ext_resource type="Script" path="res://Scripts/Player/Poo_Slime/poo_slime.gd" id="1_bsbqu"]
[ext_resource type="Texture2D" uid="uid://c5885l3myek37" path="res://Sprites/Player/Shadow.png" id="2_5h76u"]
[ext_resource type="PackedScene" uid="uid://ntk8638ot6rw" path="res://Scenes/Player/Poo_Slime/Fart_Attack_Perk.tscn" id="2_82rci"]
[ext_resource type="Texture2D" uid="uid://dhaj8lsbb5i7" path="res://Sprites/Player/PooSlime/PooSlime.png" id="3_30u7w"]

[sub_resource type="Animation" id="Animation_hcri4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1ts8f"]
resource_name = "bounce_shadow"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animation_Player_Slime:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_3gxh7"]
resource_name = "bounce_shock"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animation_Player_Slime:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ejh1s"]
_data = {
"RESET": SubResource("Animation_hcri4"),
"bounce_shadow": SubResource("Animation_1ts8f"),
"bounce_shock": SubResource("Animation_3gxh7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6kwl"]
size = Vector2(14, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efr02"]
size = Vector2(14, 10)

[node name="Poo_Slime" type="CharacterBody2D" node_paths=PackedStringArray("damage_collision")]
script = ExtResource("1_bsbqu")
damage_collision = NodePath("Damage_Collision")
sprite_perk = ExtResource("2_82rci")
max_life = 110
resistance = 1
max_energy = 210

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.266667)
texture_filter = 1
position = Vector2(1, 2)
texture = ExtResource("2_5h76u")
hframes = 2

[node name="Slime" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_30u7w")
hframes = 2

[node name="Animation_Player_Slime" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ejh1s")
}
autoplay = "bounce_shadow"

[node name="Map_Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l6kwl")

[node name="Damage_Collision" type="Area2D" parent="."]
collision_layer = 14
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage_Collision"]
visible = false
shape = SubResource("RectangleShape2D_efr02")
debug_color = Color(0.686275, 0.25098, 0, 0.419608)

[node name="Fart_Cooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="_extra_physics_process" from="." to="." method="_on_extra_physics_process"]
[connection signal="timeout" from="Fart_Cooldown" to="." method="_on_fart_cooldown_timeout"]
